syntax = "proto3";

package hello_proto;

service Hello {
  rpc sayHello (HelloReq) returns (HelloResp) {};
}

message HelloReq {
  string name = 1;
  int32 age = 2;
}

message HelloResp {
  string message = 1;
}